[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rayssh"
version = "0.1.0"
description = "Command a Ray node like a shell"
readme = "readme.md"
requires-python = ">=3.8"
authors = [
    {name = "RaySSH Development Team"}
]
keywords = ["ray", "ssh", "distributed", "cluster", "shell"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ray>=2.0.0"
]

[project.scripts]
rayssh = "rayssh:main"

[project.urls]
Homepage = "https://github.com/username/rayssh"
Repository = "https://github.com/username/rayssh"

[tool.setuptools]
py-modules = ["rayssh", "shell_actor", "utils"] 