[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rayssh"
version = "0.1.0"
description = "Command a Ray node like a shell"
readme = "readme.md"
requires-python = ">=3.8"
authors = [
    {name = "RaySSH Development Team"}
]
keywords = ["ray", "ssh", "distributed", "cluster", "shell"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ray>=2.0.0"
]

[project.scripts]
rayssh = "rayssh:main"

[project.urls]
Homepage = "https://github.com/username/rayssh"
Repository = "https://github.com/username/rayssh"

[tool.setuptools]
py-modules = ["rayssh", "shell_actor", "utils", "lab_actor"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto" 